# balls-github-plugin

./: .gitignore  Cargo.toml  Makefile  README.md
.balls/: config.json
.balls/tasks/: .gitattributes  bl-0fe5.json  bl-0fe5.notes.jsonl  bl-12f6.json  bl-12f6.notes.jsonl  bl-21d3.json  bl-2202.json  bl-2202.notes.jsonl  bl-2644.json  bl-2644.notes.jsonl  bl-4918.json  bl-4918.notes.jsonl  bl-507f.json  bl-507f.notes.jsonl  bl-5884.json  bl-5884.notes.jsonl  bl-6dbb.json  bl-73cd.json  bl-80e7.json  bl-80e7.notes.jsonl  bl-841e.json  bl-85c8.json  bl-85c8.notes.jsonl  bl-89d5.json  bl-89d5.notes.jsonl  bl-a071.json  bl-a071.notes.jsonl  bl-be16.json  bl-be16.notes.jsonl  bl-db27.json  bl-db27.notes.jsonl  bl-dc55.json  bl-dc55.notes.jsonl  bl-f94e.json  bl-f94e.notes.jsonl  bl-fd7c.json  bl-fd7c.notes.jsonl  bl-fd8e.json  bl-fd8e.notes.jsonl  bl-fd94.json  (+1 more)
.github/workflows/: ci.yml
crates/balls-github-shared/: Cargo.toml
crates/balls-github-shared/src/: auth.rs  config_base.rs  http.rs  lib.rs  projection_boundary_test.rs  types.rs  wire.rs
crates/balls-plugin-github/: Cargo.toml  README.md
crates/balls-plugin-github-issues/: Cargo.toml  README.md
crates/balls-plugin-github-issues/src/: adopt.rs  base.rs  cli.rs  config.rs  content.rs  dispatch.rs  dispatch_tests.rs  issues_api.rs  main.rs  marker.rs  merge.rs  merge_tests.rs  pull.rs  pull_content.rs  pull_content_tests.rs  pull_emit.rs  pull_emit_tests.rs  pull_emit_update.rs  pull_emit_update_tests.rs  pull_tests.rs  push.rs  push_tests.rs  shellback.rs  store.rs  territory.rs  wire.rs
crates/balls-plugin-github-issues/src/commands/: auth_check.rs  auth_setup.rs  push.rs  push_tests.rs  sync.rs
crates/balls-plugin-github-issues/tests/: auth.rs  cli.rs  lifecycle.rs  push.rs  sync.rs  sync_content_mirror.rs
crates/balls-plugin-github-issues/tests/common/: mod.rs
crates/balls-plugin-github/src/: authcmd.rs  authcmd_tests.rs  bl_ops.rs  bl_ops_tests.rs  cli.rs  config.rs  edge.rs  edge_tests.rs  error.rs  forge.rs  forge_tests.rs  git_ops.rs  git_ops_tests.rs  main.rs  pr_api.rs  pr_api_tests.rs  project.rs  project_tests.rs  scratch.rs  scratch_tests.rs  types.rs  wire.rs  wire_tests.rs
crates/balls-plugin-github/src/commands/: auth_check.rs  auth_setup.rs  mod.rs  push.rs  sync.rs
crates/balls-plugin-github/tests/: cli.rs
docs/design/: forge.md
scripts/: check-coverage.sh  check-line-lengths.sh  install-hooks.sh  live_sandbox.sh  pre-commit
src/: config.rs  github.rs  main.rs  types.rs
src/commands/: auth_check.rs  auth_setup.rs  push.rs
