[workspace]
resolver = "2"
members = [
    "crates/balls-github-shared",
    "crates/balls-plugin-github",
    "crates/balls-plugin-github-issues",
]

# Shared dep versions — every crate in the workspace pulls from here via
# `dep.workspace = true`. Keeps the two binaries and the `balls-github-shared`
# crate they both build on one resolution.
[workspace.dependencies]
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

assert_cmd = "2"
mockito = "1"
predicates = "3"
tempfile = "3"
