[package]
name = "balls-github-shared"
version = "0.1.0"
edition = "2021"
description = "Shared library for balls GitHub plugins (auth, HTTP, config base)"
license = "MIT"

[lib]
name = "balls_github_shared"
path = "src/lib.rs"

[dependencies]
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
mockito = { workspace = true }
tempfile = { workspace = true }
