[package]
name = "balls-plugin-github-issues"
version = "0.1.0"
edition = "2021"
description = "GitHub Issues plugin for balls (bidirectional task mirror)"
license = "MIT"

[[bin]]
name = "balls-plugin-github-issues"
path = "src/main.rs"

[dependencies]
balls-github-shared = { path = "../balls-github-shared" }
serde = { workspace = true }
serde_json = { workspace = true }
# §3 ball files are TOML frontmatter; the pull side parses `<store>/tasks/<id>.md`
# to read the balls-side title for three-way merge (bl-613d). Pure-Rust, bounded.
toml = "0.8"

[dev-dependencies]
assert_cmd = { workspace = true }
mockito = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }
