[package]
name = "balls-plugin-github"
version = "0.1.0"
edition = "2021"
description = "GitHub forge plugin for balls: deferred-mode delivery via pull requests"
license = "MIT"

[[bin]]
name = "balls-plugin-github"
path = "src/main.rs"

[dependencies]
chrono = { workspace = true }
clap = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
mockito = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }
