[package]
name = "balls-plugin-github"
version = "0.1.0"
description = "GitHub forge plugin for balls: the §11 forge delivery variant (gate child + PR push) over the §6/§7 subprocess protocol"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "balls-plugin-github"
path = "src/main.rs"

[dependencies]
balls-github-shared = { path = "../balls-github-shared" }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
mockito = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }
